// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should render 1`] = `
<div
  class="css-169d3qw-navbar denali-navbar"
  data-testid="navbar"
/>
`;

exports[`NavBar should render with background prop 1`] = `
<div
  class="css-o5ficc-navbar denali-navbar"
  data-testid="navbar"
/>
`;

exports[`NavBar should render with position prop 1`] = `
<div
  class="css-4qv8al-navbar denali-navbar"
  data-testid="navbar"
/>
`;
